[metadata]
name = lpa-xrd
version = attr: lpa.xrd.__version__
author = Dunstan Becht
author_email = dunstan@becht.network
description = Tools for the simulation of x-ray diffraction.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DunstanBecht/lpa-xrd
project_urls =
    Bug Tracker = https://github.com/DunstanBecht/lpa-xrd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Environment :: GPU
    Topic :: Scientific/Engineering :: Physics

[options]
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    beartype

[options.packages.find]
where = src
